# frbsf-economic-letters-by-kiro-1

./: .env.example  .gitignore  DEPLOYMENT.md  EXECUTIVE_SUMMARY.md  IDEA.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  USAGE.md  pyproject.toml  run.py  start.bat  take_screenshots.py  test_scraper.py
.kiro/specs/economic-letter-insights/: design.md  requirements.md  tasks.md
app/: __init__.py  config.py  main.py
app/db/: database.py  repository.py  schema.py
app/models/: schemas.py
app/services/: llm.py  scraper.py
static/: index.html
